<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8121.17" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Ff0-Pf-fdF">
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.14"/>
    </dependencies>
    <scenes>
        <!--My Progress-->
        <scene sceneID="eah-6Q-U7k">
            <objects>
                <viewController id="qCY-Ei-5Lm" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Xdz-SH-uvy"/>
                        <viewControllerLayoutGuide type="bottom" id="sfB-Ma-3Rd"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="9DZ-tQ-TKb">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <animations/>
                        <color key="backgroundColor" red="1" green="0.40000000596046448" blue="0.40000000596046448" alpha="1" colorSpace="calibratedRGB"/>
                    </view>
                    <navigationItem key="navigationItem" title="My Progress" id="My7-wO-fOd">
                        <barButtonItem key="rightBarButtonItem" title="Profile" id="Uh0-wo-EeE">
                            <connections>
                                <segue destination="4pa-1g-lyC" kind="show" id="zxY-Ri-Etc"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="k33-gf-BXo" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="4285" y="-364"/>
        </scene>
        <!--Profile-->
        <scene sceneID="rZW-mf-0OO">
            <objects>
                <viewController id="4pa-1g-lyC" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="9Os-ZW-h13"/>
                        <viewControllerLayoutGuide type="bottom" id="bDc-p1-E4O"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="YMG-2m-FdI">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <animations/>
                        <color key="backgroundColor" red="1" green="0.50196081399917603" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                    </view>
                    <navigationItem key="navigationItem" title="Profile" id="Ply-YT-22D"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="w5T-w6-Rop" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="5032" y="-364"/>
        </scene>
        <!--View Controller-->
        <scene sceneID="Xug-iT-ASr">
            <objects>
                <viewController id="edh-w3-TPV" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="3JE-mk-ODi"/>
                        <viewControllerLayoutGuide type="bottom" id="DfJ-ee-vjr"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="a2D-qK-r4F">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <animations/>
                        <color key="backgroundColor" red="0.0" green="0.50196081399917603" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                    </view>
                    <navigationItem key="navigationItem" id="jH6-KU-VIB"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="kbA-uA-fJ1" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="4285" y="408"/>
        </scene>
        <!--Leaderboard-->
        <scene sceneID="5Ck-ol-RfU">
            <objects>
                <viewControllerPlaceholder storyboardName="Leaderboard" id="cOa-DV-zDT" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="LYU-OW-sX2"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="xUQ-py-002" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="3473.5" y="1023"/>
        </scene>
        <!--Tab Bar Controller-->
        <scene sceneID="zN1-Og-Yqs">
            <objects>
                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Ff0-Pf-fdF" sceneMemberID="viewController">
                    <toolbarItems/>
                    <nil key="simulatedBottomBarMetrics"/>
                    <tabBar key="tabBar" contentMode="scaleToFill" id="2tA-mP-gyy">
                        <autoresizingMask key="autoresizingMask"/>
                        <animations/>
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                    </tabBar>
                    <connections>
                        <segue destination="blw-SJ-Ddx" kind="relationship" relationship="viewControllers" id="ydq-g5-Whr"/>
                        <segue destination="hbh-Vq-jbX" kind="relationship" relationship="viewControllers" id="Yym-ah-eEZ"/>
                        <segue destination="cOa-DV-zDT" kind="relationship" relationship="viewControllers" id="o85-cT-01S"/>
                    </connections>
                </tabBarController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Im4-m5-jQ4" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2676" y="408"/>
        </scene>
        <!--My Progress-->
        <scene sceneID="iTU-Ph-d5Q">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="blw-SJ-Ddx" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="My Progress" id="qaa-Zg-7AL"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ItH-Xf-Bbt">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <animations/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="qCY-Ei-5Lm" kind="relationship" relationship="rootViewController" id="qNc-Fx-EE1"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="MR9-QT-aQK" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="3473" y="-364"/>
        </scene>
        <!--Competitions-->
        <scene sceneID="4HY-0i-gSH">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hbh-Vq-jbX" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Competitions" id="Opu-NI-Njs"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="XMT-Mm-nyp">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="edh-w3-TPV" kind="relationship" relationship="rootViewController" id="BFi-RI-dbU"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="MV7-Ty-xsu" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="3473" y="408"/>
        </scene>
    </scenes>
</document>
